# havn

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  LICENSE  README.md  TODOS.md
.github/workflows/: ci.yml  release.yml
Formula/: README.md  havn.rb
dashboard/: app.js  index.html  style.css
src/: api.rs  cli.rs  config.rs  env_file.rs  logs.rs  main.rs  mcp.rs  rate_limit.rs  registry.rs  secrets.rs  server.rs  service.rs  ws.rs
src/scanner/: lsof.rs  mod.rs  project.rs  types.rs  watcher.rs
