[package]
name = "havn"
version = "0.1.0"
edition = "2021"
description = "Map local ports to project directories — CLI, dashboard, and MCP server"
license = "MIT"
repository = "https://github.com/omarelloumi/havn"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.32", features = ["bundled"] }
clap = { version = "4", features = ["derive"] }
rust-embed = "8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
open = "5"
nix = { version = "0.29", features = ["signal", "process"] }
mime_guess = "2"
tower-http = { version = "0.6", features = ["cors"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"] }
rmcp = { version = "1.3", features = ["server", "transport-io", "schemars"] }
schemars = "1.0"
libc = "0.2"
aes-gcm = "0.10"
rand = "0.8"
futures = "0.3"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
tempfile = "3"
tokio-tungstenite = "0.26"
